--- a/src/components/autocomplete-multiselect/autocomplete-multiselect.scss
+++ b/src/components/autocomplete-multiselect/autocomplete-multiselect.scss
@@ -26,6 +26,10 @@
     border-color: #b30009;
   }
 
+  &.is-invalid ::placeholder {
+    color: #b30009 !important;
+  }
+
   .form-control:focus {
     background-color: transparent;
     border-color: none;
@@ -39,10 +43,10 @@
     box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25) !important;
   }
 
-  &.is-invalid-focused {
-    border-color: #dc3545 !important; /* Fallback for --bs-form-invalid-border-color */
-    box-shadow: 0 0 0 0.25rem rgba(220, 53, 69, 0.25) !important; /* Fallback for --bs-danger-rgb */
-  }
+  // &.is-invalid-focused {
+  //   border-color: #dc3545 !important; /* Fallback for --bs-form-invalid-border-color */
+  //   box-shadow: 0 0 0 0.25rem rgba(220, 53, 69, 0.25) !important; /* Fallback for --bs-danger-rgb */
+  // }
 
   &.sm {
     min-height: 36px;
@@ -71,7 +75,6 @@
   overflow: auto;
   max-height: 100px;
   padding-top: 2px;
-
 
   .badge {
     align-items: center;
