--- a/src/components/autocomplete-multiselect/autocomplete-multiselect.scss
+++ b/src/components/autocomplete-multiselect/autocomplete-multiselect.scss
@@ -1,229 +1,202 @@
-.ac-multi-select-container {
-  border: 1px solid #ced4da;
-  border-radius: 0.25rem;
-  display: flex;
-  flex-wrap: wrap;
-  width: 100%;
+// .ac-multi-select-container {
+//   border: 1px solid #ced4da;
+//   border-radius: 0.25rem;
+//   display: flex;
+//   flex-wrap: wrap;
+//   width: 100%;
 
-  .input-group {
-    flex-wrap: nowrap !important;
+//   .input-group {
+//     flex-wrap: nowrap !important;
 
-    .form-control {
-      border: none;
-      display: flex !important;
-      flex: 1 1 auto !important; // 200px
-      padding: 0.375rem 0.75rem;
-      width: 100%;
-    }
+//     .form-control {
+//       border: none;
+//       display: flex !important;
+//       flex: 1 1 auto !important; // 200px
+//       padding: 0.375rem 0.75rem;
+//       width: 100%;
+//     }
 
-    > .input-group-btn {
-      border: none;
-    }
-  }
+//     > .input-group-btn {
+//       border: none;
+//     }
+//   }
 
-  &:invalid,
-  &.is-invalid {
-    border-color: #b30009;
-  }
+//   &:invalid,
+//   &.is-invalid {
+//     border-color: #b30009;
+//   }
 
-  &.is-invalid ::placeholder {
-    color: #b30009 !important;
-  }
+//   &.is-invalid ::placeholder {
+//     color: #b30009 !important;
+//   }
 
-  .form-control:focus {
-    background-color: transparent;
-    border-color: none;
-    color: #383838;
-    outline: 0;
-    box-shadow: none;
-  }
+//   .form-control:focus {
+//     background-color: transparent;
+//     border-color: none;
+//     color: #383838;
+//     outline: 0;
+//     box-shadow: none;
+//   }
 
-  &.ac-focused {
-    border-color: #9bc4f6 !important;
-    box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25) !important;
-  }
+//   &.ac-focused {
+//     border-color: #9bc4f6 !important;
+//     box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25) !important;
+//   }
 
-  // &.is-invalid-focused {
-  //   border-color: #dc3545 !important; /* Fallback for --bs-form-invalid-border-color */
-  //   box-shadow: 0 0 0 0.25rem rgba(220, 53, 69, 0.25) !important; /* Fallback for --bs-danger-rgb */
-  // }
+//   &.sm {
+//     min-height: 36px;
 
-  &.sm {
-    min-height: 36px;
+//     .input-group-btn {
+//       min-height: 32px;
+//     }
+//   }
 
-    .input-group-btn {
-      min-height: 32px;
-    }
-  }
+//   &.lg {
+//     min-height: 48px;
+//   }
 
-  &.lg {
-    min-height: 48px;
-  }
+//   .input-sm {
+//     min-height: 34px;
+//   }
 
-  .input-sm {
-    min-height: 34px;
-  }
+//   .input-lg {
+//     min-height: 46px;
+//   }
+// }
 
-  .input-lg {
-    min-height: 46px;
-  }
-}
+// .ac-selected-items {
+//   display: flex;
+//   flex-wrap: wrap;
+//   overflow: auto;
+//   max-height: 100px;
+//   padding-top: 2px;
 
-.ac-selected-items {
-  display: flex;
-  flex-wrap: wrap;
-  overflow: auto;
-  max-height: 100px;
-  padding-top: 2px;
+//   .badge {
+//     align-items: center;
+//     background-color: transparent;
+//     border: 1px solid #8e8e8e;
+//     // border-radius: 1rem;
+//     color: #000000;
+//     display: flex;
+//     font-size: 0.75rem;
+//     height: 30px;
+//     justify-content: center;
+//     margin: 0.15rem;
+//     padding: 0.15rem 0.5rem !important;
+//     position: relative;
 
-  .badge {
-    align-items: center;
-    background-color: transparent;
-    border: 1px solid #8e8e8e;
-    // border-radius: 1rem;
-    color: #000000;
-    display: flex;
-    font-size: 0.75rem;
-    height: 30px;
-    justify-content: center;
-    margin: 0.15rem;
-    padding: 0.15rem 0.5rem !important;
-    position: relative;
+//     &.sm {
+//       font-size: 0.65rem !important;
+//       height: 28px;
+//     }
 
-    &.sm {
-      font-size: 0.65rem !important;
-      height: 28px;
-    }
+//     &.lg {
+//       font-size: 1rem !important;
+//       height: 38px;
+//     }
 
-    &.lg {
-      font-size: 1rem !important;
-      height: 38px;
-    }
+//     &.square {
+//       border-radius: 0px;
+//     }
 
-    &.square {
-      border-radius: 0px;
-    }
+//     &.pill {
+//       border-radius: 1.75rem;
+//       padding: 0.25rem 0.5rem;
+//     }
 
-    &.pill {
-      border-radius: 1.75rem;
-      padding: 0.25rem 0.5rem;
-    }
+//     span {
+//       margin-right: 0.5rem;
+//       margin-top: -0.1rem;
+//     }
 
-    span {
-      margin-right: 0.5rem;
-      margin-top: -0.1rem;
-    }
+//     .remove-btn {
+//       background-color: transparent;
+//       border: none;
+//       border-radius: 25%;
+//       margin: 0;
+//       padding: 0;
+//       height: 1rem;
+//       width: 1rem;
+//       display: flex;
+//       align-items: center;
+//       justify-content: center;
+//       color: #666666;
+//     }
 
-    .remove-btn {
-      background-color: transparent;
-      border: none;
-      border-radius: 25%;
-      margin: 0;
-      padding: 0;
-      height: 1rem;
-      width: 1rem;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-    }
+//     .remove-btn:hover,
+//     .remove-btn:focus {
+//       color: #b30009;
+//       outline: none;
+//     }
+//   }
 
-    .remove-btn svg {
-      cursor: pointer;
-      fill: #666666;
-      height: 1rem;
-      position: relative;
-      width: 1rem;
-      z-index: 1;
-    }
+//   .text-bg-primary {
+//     .remove-btn {
+//       color: #fff;
+//       &:hover,
+//       &focus {
+//         color: #f7caca;
+//       }
+//     }
+//   }
 
-    .remove-btn:hover svg,
-    .remove-btn:focus svg {
-      fill: #b30009;
-      outline: none;
-    }
-  }
+//   .text-bg-secondary {
+//     .remove-btn {
+//       color: #fff;
+//       &:hover,
+//       &focus {
+//         color: #f7caca;
+//       }
+//     }
+//   }
 
-  .text-bg-primary {
-    .remove-btn {
-      svg {
-        fill: #fff;
-        &:hover,
-        &focus {
-          fill: #f7caca;
-        }
-      }
-    }
-  }
+//   .text-bg-success {
+//     .remove-btn {
+//       color: #fff;
+//       &:hover,
+//       &focus {
+//         color: #f7caca;
+//       }
+//     }
+//   }
 
-  .text-bg-secondary {
-    .remove-btn {
-      svg {
-        fill: #fff;
-        &:hover,
-        &focus {
-          fill: #f7caca;
-        }
-      }
-    }
-  }
+//   .text-bg-danger {
+//     .remove-btn {
+//       color: #fff;
+//       &:hover,
+//       &focus {
+//         color: #f7caca;
+//       }
+//     }
+//   }
 
-  .text-bg-success {
-    .remove-btn {
-      svg {
-        fill: #fff;
-        &:hover,
-        &focus {
-          fill: #f7caca;
-        }
-      }
-    }
-  }
+//   .text-bg-warning {
+//     .remove-btn {
+//       color: #fff;
+//       &:hover,
+//       &focus {
+//         color: #a90000;
+//       }
+//     }
+//   }
 
-  .text-bg-danger {
-    .remove-btn {
-      svg {
-        fill: #fff;
-        &:hover,
-        &focus {
-          fill: #f7caca;
-        }
-      }
-    }
-  }
+//   .text-bg-info {
+//     .remove-btn {
+//       color: #fff;
+//       &:hover,
+//       &focus {
+//         color: #a90000;
+//       }
+//     }
+//   }
 
-  .text-bg-warning {
-    .remove-btn {
-      svg {
-        fill: #fff;
-        &:hover,
-        &focus {
-          fill: #a90000;
-        }
-      }
-    }
-  }
-
-  .text-bg-info {
-    .remove-btn {
-      svg {
-        fill: #fff;
-        &:hover,
-        &focus {
-          fill: #a90000;
-        }
-      }
-    }
-  }
-
-  .text-bg-dark {
-    .remove-btn {
-      svg {
-        fill: #fff;
-        &:hover,
-        &focus {
-          fill: #f7caca;
-        }
-      }
-    }
-  }
-}
+//   .text-bg-dark {
+//     .remove-btn {
+//       color: #fff;
+//       &:hover,
+//       &focus {
+//         color: #f7caca;
+//       }
+//     }
+//   }
+// }
