--- a/src/components/plumage-input-group/plumage-input-group-styles.scss
+++ b/src/components/plumage-input-group/plumage-input-group-styles.scss
@@ -1,5 +1,51 @@
-/* Scope everything to Plumage timepicker */
+// ---------------------------------------------
+// Tokens
+// ---------------------------------------------
+$gray-100: #f5f5f5;
+$gray-200: #e1e1e1;
+$gray-250: #eaeaea;
+$gray-400: #cccccc;
+$gray-600: #7d7d7d;
+$gray-700: #495057;
+$text: #383838;
+
+$brand: #2680eb;
+
+$radius: 0.25rem;
+
+// ---------------------------------------------
+// Mixins
+// ---------------------------------------------
+@mixin input-reset-focus {
+  &:focus {
+    box-shadow: none;
+    outline: none;
+  }
+}
+
+@mixin input-group-size($pad-y, $pad-x, $font, $line-height: 1.5) {
+  > .custom-select,
+  > .form-control,
+  > .input-group-append > .btn,
+  > .input-group-append > .input-group-text,
+  > .input-group-prepend > .btn,
+  > .input-group-prepend > .input-group-text {
+    padding: $pad-y $pad-x;
+    font-size: $font;
+    line-height: $line-height;
+  }
+}
+
+@mixin underline-base($height) {
+  height: $height;
+  transition: 0.4s;
+}
+
+// ---------------------------------------------
+// Plumage timepicker scope
+// ---------------------------------------------
 .plumage {
+  // Inline layout container spacing
   .form-input-group.inline {
     display: flex;
 
@@ -10,7 +56,7 @@
 
   /* =========================
        Input Group Layout
-    ========================== */
+     ========================= */
   .input-group {
     position: relative;
     display: flex;
@@ -19,11 +65,8 @@
     border: none;
     width: 100%;
 
-    /* Remove default focus ring on input inside this group */
-    input:focus {
-      box-shadow: none;
-      outline: none;
-    }
+    // Remove default focus ring on inputs in group
+    input { @include input-reset-focus; }
 
     /* Common children inside input-group */
     > .custom-file,
@@ -37,17 +80,11 @@
     }
 
     /* Padding tweaks for first/other controls */
-    > .form-control:first-child {
-      padding-left: 0.5rem;
-    }
-    > .form-control:not(first-child) {
-      padding-left: 0;
-    }
+    > .form-control:first-child { padding-left: 0.5rem; }
+    > .form-control:not(:first-child) { padding-left: 0; }
 
     &:last-child {
-      .input-group-text {
-        border: 0;
-      }
+      .input-group-text { border: 0; }
     }
 
     .btn {
@@ -68,13 +105,11 @@
     font-size: 1rem;
     font-weight: 400;
     line-height: 1.5;
-    color: #495057;
+    color: $gray-700;
     text-align: center;
     white-space: nowrap;
 
-    &.is-invalid {
-      color: #b30009;
-    }
+    &.is-invalid { color: #b30009; }
   }
 
   /* Generic button placed inside input group */
@@ -98,36 +133,14 @@
 
   /* SM size */
   .input-group-sm {
-    > .custom-select,
-    > .form-control,
-    > .input-group-append > .btn,
-    > .input-group-append > .input-group-text,
-    > .input-group-prepend > .btn,
-    > .input-group-prepend > .input-group-text {
-      padding: 0.25rem 0.5rem;
-      font-size: 0.833rem;
-      line-height: 1.5;
-      min-height: 0;
-    }
-
-    > .form-control {
-      padding: 0.25rem 0.5rem 0.25rem 0;
-    }
+    @include input-group-size(0.25rem, 0.5rem, 0.833rem);
+    > .form-control { padding: 0.25rem 0.5rem 0.25rem 0; }
   }
 
   /* LG size */
   .input-group-lg {
     min-width: 240px !important;
-    > .custom-select,
-    > .form-control,
-    > .input-group-append > .btn,
-    > .input-group-append > .input-group-text,
-    > .input-group-prepend > .btn,
-    > .input-group-prepend > .input-group-text {
-      padding: 0.25rem 1rem;
-      font-size: 1.25rem;
-      line-height: 1.5;
-    }
+    @include input-group-size(0.25rem, 1rem, 1.25rem);
 
     > .form-control {
       width: 135px;
@@ -138,7 +151,7 @@
 
   /* =========================
        States / Validation
-    ========================== */
+     ========================= */
   .form-input-group label {
     margin-bottom: 0.25rem !important;
   }
@@ -146,18 +159,16 @@
   .form-input-group.inline .form-control-label {
     align-items: start !important;
     padding-top: 7px !important;
-  }
 
-  .form-input-group.inline .form-control-label.label-lg {
-    align-items: start !important;
-    padding-top: 11px !important;
-}
+    &.label-lg {
+      padding-top: 11px !important;
+    }
+  }
 
   .horizontal .form-input-group label {
     display: flex;
     align-items: center;
     justify-content: right;
-    // font-size: 0.8333rem;
     margin-bottom: 0 !important;
     padding-right: 8px !important;
   }
@@ -170,7 +181,7 @@
   .form-control:disabled,
   .form-control.disabled,
   .input-group.disabled {
-    background-color: rgb(245, 245, 245);
+    background-color: $gray-100;
   }
 
   :disabled.b-focus,
@@ -183,7 +194,6 @@
     background-position: right calc(-1.25em + 1.5rem) center;
   }
 
-  .input-group.is-invalid > .input-group-text,
   .input-group.is-invalid > .input-group-text {
     color: #b30009;
   }
@@ -205,61 +215,56 @@
     border-radius: 0 !important;
   }
 
-
   /* =========================
        Input Underline
-    ========================== */
+     ========================= */
   .b-underline {
-    background-color: #ccc;
+    background-color: $gray-400;
     display: block;
-    height: 0.01rem;
     position: relative;
-    transition: 0.4s;
     width: 100%;
+    @include underline-base(0.01rem);
   }
 
   .b-focus {
-    background-color: #2680eb;
+    background-color: $brand;
     bottom: 0;
-    height: 0.01rem;
     left: 50%;
     position: absolute;
-    transition: 0.4s;
     width: 0;
+    @include underline-base(0.01rem);
   }
 }
 
 /* =========================================
-   (Optional) Search Bar styles used near the control
+   (Optional) Search Bar styles near control
+   (kept out of .plumage to reuse elsewhere)
 ========================================= */
-
 .search-bar-container {
   align-items: center;
-  background-color: #e1e1e1;
+  background-color: $gray-200;
   border: 1px solid transparent;
-  border-radius: 0.25rem;
-  color: #383838;
+  border-radius: $radius;
+  color: $text;
   display: flex;
   max-height: 2.5rem;
   padding: 0;
   width: unset;
 
-  &.input-group {
-    flex-wrap: nowrap;
-  }
+  &.input-group { flex-wrap: nowrap; }
 
   &:focus,
   &:hover,
   &:focus-within {
-    background-color: #eaeaea;
-    border: 1px solid #2680eb;
+    background-color: $gray-250;
+    border: 1px solid $brand;
   }
 
   .form-control {
     background-color: transparent;
     background-clip: padding-box;
     border: 1px solid transparent;
-    color: #383838;
+    color: $text;
     display: block;
     font-size: 0.8333rem;
     font-weight: 400;
@@ -270,14 +275,23 @@
 
     &:focus {
       background-color: transparent;
-      color: #383838;
+      border-color: transparent;
+      color: $text;
       outline: 0;
       box-shadow: none;
     }
   }
 
   .clear-icon {
-    padding: 0 0.25rem;
+    align-items: center;
+    display: flex;
+    padding: 0 0.5rem;
+
+    &:hover,
+    &:focus {
+      color: $gray-600;
+      cursor: pointer;
+    }
   }
 }
 
@@ -290,8 +304,9 @@
 }
 
 .search-bar-icon {
+  align-items: center;
   color: #8e8e8e;
-  display: inline-block;
+  display: flex;
   font-size: 0.75rem;
   line-height: 50%;
   padding: 0 0.5rem;
