--- a/src/components/plumage-select-field/plumage-select-field-styles.scss
+++ b/src/components/plumage-select-field/plumage-select-field-styles.scss
@@ -1,29 +1,54 @@
+// -------------------------------------------------
+// Tokens
+// -------------------------------------------------
+$color-text:        #495057;
+$color-border:      #ced4da;
+$color-focus-ring:  rgba(0, 123, 255, 0.25);
+$color-focus:       #2680eb;
+$color-danger:      #b30009;
+$color-disabled-bg: #f5f5f5;
+$color-muted:       #6c757d;
+
+$label-sm:          0.875rem;
+$label-default:     1rem;
+$label-lg:          1.125rem;
+
+$col-form-ptb:      calc(0.375rem + 1px);
+$underline-height:  1px;
+
+// Bootstrap-like custom select arrow
+$custom-caret: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 4 5'%3E%3Cpath fill='%23343a40' d='M2 0L0 2h4zm0 5L0 3h4z'/%3E%3C/svg%3E");
+
+// -------------------------------------------------
+// Helpers
+// -------------------------------------------------
+@mixin placeholder-color($c) {
+  &::-webkit-input-placeholder { color: $c; }
+  &:-moz-placeholder           { color: $c; opacity: 1; }
+  &::-moz-placeholder          { color: $c; opacity: 1; }
+  &:-ms-input-placeholder      { color: $c; }
+  &::-ms-input-placeholder     { color: $c; }
+  &::placeholder               { color: $c; }
+}
+
+// -------------------------------------------------
+// Plumage scope
+// -------------------------------------------------
 .plumage {
+  // Base input resets
   input {
     font-family: inherit;
     font-size: inherit;
     line-height: inherit;
     margin: 0;
-  }
-
-  input {
     overflow: visible;
   }
 
+  // -------- Layout wrappers --------
   .form-group {
     padding: 5px 15px;
-  }
-
-  .form-group {
     margin-bottom: 0.25rem;
-  }
-
-  .form-group {
     text-align: left;
-  }
-
-  .horizontal .form-group {
-    padding: 5px;
   }
 
   .input-container {
@@ -31,19 +56,27 @@
     text-align: left;
   }
 
-  .horizontal .input-container,
-  .inline .input-container {
-    padding: 0 15px;
-  }
-
   .form-group.input-container {
     margin-bottom: 0.25rem;
   }
 
+  .horizontal {
+    .form-group { padding: 5px; }
+    .input-container { padding: 0 15px; }
+  }
+
+  .inline .input-container { padding: 0 15px; }
+
+  // -------- Labels --------
   label {
     display: inline-block;
     margin-bottom: 0.5rem;
+    position: relative;
   }
+
+  .label-sm      { font-size: $label-sm !important; }
+  .label-default { font-size: $label-default !important; }
+  .label-lg      { font-size: $label-lg !important; }
 
   .horizontal label,
   .inline label {
@@ -52,29 +85,13 @@
     justify-content: left;
     margin-bottom: 0;
     position: relative;
-  }
 
-  .horizontal label {
-    &.align-right {
-      justify-content: right;
-    }
-  }
-
-  label {
-    // font-size: 0.75rem;
-    position: relative;
-  }
-
-  .horizontal .form-group .form-control-label.invalid,
-  .inline .form-group .form-control-label.invalid {
-    position: relative;
-    align-items: normal;
-    padding-top: 12px;
+    &.align-right { justify-content: right; }
   }
 
   .col-form-label {
-    padding-top: calc(0.375rem + 1px);
-    padding-bottom: calc(0.375rem + 1px);
+    padding-top: $col-form-ptb;
+    padding-bottom: $col-form-ptb;
     margin-bottom: 0;
     font-size: inherit;
     line-height: 1.5;
@@ -82,256 +99,207 @@
 
   .form-group .form-control-label,
   .form-group label {
-    // font-size: 0.75rem;
     font-weight: 400;
     line-height: 1.1;
     margin-bottom: 0.25rem;
   }
 
-  .inline .form-group .form-control-label,
-  .inline .form-group label {
-    margin-bottom: 0;
-    white-space: nowrap;
+  .inline {
+    .form-group .form-control-label,
+    .form-group label {
+      margin-bottom: 0;
+      white-space: nowrap;
+      padding: 0 0.5rem;
+    }
   }
 
-  .horizontal .form-group .form-control-label,
-  .horizontal .form-group label {
-    margin-bottom: 0;
-    white-space: normal;
+  .horizontal {
+    .form-group .form-control-label,
+    .form-group label {
+      margin-bottom: 0;
+      white-space: normal;
+    }
   }
 
-  .inline .form-group .form-control-label,
-  .inline .form-group label {
-    padding: 0 0.5rem;
+  .horizontal .form-group .form-control-label.invalid,
+  .inline     .form-group .form-control-label.invalid {
+    position: relative;
+    align-items: normal;
+    padding-top: 12px;
   }
 
+  // Align by size within inline/horizontal
+  .inline,
+  .horizontal {
+    .form-control-label     { align-items: start !important; padding-top: 6px !important; }
+    .label-sm               { align-items: start !important; padding-top: 5px !important; }
+    .label-default          { align-items: start !important; padding-top: 7px !important; }
+    .label-lg               { align-items: start !important; padding-top: 9px !important; }
+  }
+
+  // -------- Inputs / form-control --------
   .form-control {
     display: block;
     width: 100%;
     padding: 0.375rem 0.75rem;
     font-size: 1rem;
     line-height: 1.5;
-    color: #495057;
+    color: $color-text;
     background-color: #fff;
     background-clip: padding-box;
-    border: 1px solid #ced4da;
+    border: 1px solid $color-border;
     border-radius: 0.25rem;
     transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
-    width: 100%;
+
+    &.input-sm {
+      padding: 4px 0.5rem;
+      font-size: 0.8333rem;
+    }
+
+    &.input-lg {
+      padding: 8px 0.5rem;
+      font-size: 1rem;
+      line-height: 1.5;
+    }
+
+    &:disabled {
+      background-color: $color-disabled-bg;
+    }
+
+    &:focus {
+      background-color: transparent;
+      border-color: #9bc4f6;
+      color: #383838;
+      outline: 0;
+      box-shadow: 0 0 0 0.2rem $color-focus-ring;
+    }
+
+    &.is-invalid {
+      border-color: $color-danger;
+      @include placeholder-color($color-danger);
+    }
   }
 
-  .form-control:disabled {
-    background-color: #f5f5f5;
-  }
-
-  .form-control.input-sm {
-    padding: 4px 0.5rem;
-    font-size: 0.8333rem;
-  }
-
-  .form-control.input-lg {
-    padding: 8px 0.5rem;
-    font-size: 1rem;
-    line-height: 1.5;
-  }
-
+  // -------- Selects inside input-container --------
   .input-container select {
     border: none;
     font-size: 0.9375rem;
     font-weight: 300;
     line-height: 1.2;
     transition: border-color 0.25s ease;
+
+    &:focus {
+      box-shadow: none;
+      outline: none;
+    }
   }
 
-  .form-control:focus {
-    background-color: transparent;
-    border-color: #9bc4f6;
-    color: #383838;
-    outline: 0;
-    box-shadow: 0 0 0 0.2rem rgb(0 123 255 / 25%);
-  }
-
-  .input-container select:focus {
-    /* border-bottom: 1px solid #2680eb; */
-    box-shadow: none;
-    outline: none;
-  }
-
-  /* Underline the input */
-  // .b-underline {
-  //   background-color: #ccc;
-  //   display: block;
-  //   height: 1px;
-  //   position: relative;
-  //   transition: 0.4s;
-  //   width: 100%;
-  // }
-
-  // .b-focus {
-  //   background-color: #2680eb;
-  //   bottom: 0;
-  //   height: 1px;
-  //   left: 50%;
-  //   position: absolute;
-  //   transition: 0.4s;
-  //   width: 0;
-  // }
-
+  // -------- Custom select (Bootstrap-like) --------
   .custom-select {
     display: inline-block;
     width: 100%;
     height: calc(2.25rem + 2px);
     padding: 0.375rem 1.75rem 0.375rem 0.75rem;
     line-height: 1.5;
-    color: #495057;
+    color: $color-text;
     vertical-align: middle;
-    background: #fff
-      url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 4 5'%3E%3Cpath fill='%23343a40' d='M2 0L0 2h4zm0 5L0 3h4z'/%3E%3C/svg%3E")
-      no-repeat right 0.75rem center;
+    background: #fff $custom-caret no-repeat right 0.75rem center;
     background-size: 8px 10px;
-    border: 1px solid #ced4da;
+    border: 1px solid $color-border;
     border-radius: 0.25rem;
     appearance: none;
+
+    &:focus {
+      border-color: #80bdff;
+      outline: 0;
+      box-shadow:
+        inset 0 1px 2px rgb(0 0 0 / 8%),
+        0 0 5px rgb(128 189 255 / 50%);
+    }
+
+    &[multiple],
+    &[size]:not([size='1']) {
+      height: auto;
+      padding-right: 0.75rem;
+      background-image: none;
+    }
+
+    &:disabled {
+      color: $color-muted;
+      background-color: #e9ecef;
+    }
+
+    // Hide default caret in IE11
+    &::-ms-expand { opacity: 0; }
   }
 
-  .custom-select:focus {
-    border-color: #80bdff;
-    outline: 0;
-    box-shadow: inset 0 1px 2px rgb(0 0 0 / 8%), 0 0 5px rgb(128 189 255 / 50%);
+  .input-container {
+    .select-sm {
+      height: calc(1.8125rem + 2px);
+      padding-top: 0.375rem;
+      padding-bottom: 0.375rem;
+      font-size: 0.833rem;
+    }
+
+    .select-lg {
+      height: calc(2.875rem + 2px);
+      padding-top: 0.375rem;
+      padding-bottom: 0.375rem;
+      font-size: 1.25rem;
+    }
   }
 
-  /* .custom-select:focus::-ms-value {
-    // For visual consistency with other platforms/browsers,
-    // suppress the default white text on blue background highlight given to
-    // the selected option text when the (still closed) <select> receives focus
-    // in IE and (under certain conditions) Edge.
-    // See https://github.com/twbs/bootstrap/issues/19398.
-    color: $input-color;
-    background-color: $input-bg;
-  } */
-
-  .custom-select[multiple],
-  .custom-select[size]:not([size='1']) {
-    height: auto;
-    padding-right: 0.75rem;
-    background-image: none;
-  }
-
-  .custom-select:disabled {
-    color: #6c757d;
-    background-color: #e9ecef;
-  }
-
-  // Hides the default caret in IE11
-  .custom-select::-ms-expand {
-    opacity: 0;
-  }
-
-  .input-container .select-sm {
-    height: calc(1.8125rem + 2px);
-    padding-top: 0.375rem;
-    padding-bottom: 0.375rem;
-    font-size: 0.833rem;
-  }
-
-  .input-container .select-lg {
-    height: calc(2.875rem + 2px);
-    padding-top: 0.375rem;
-    padding-bottom: 0.375rem;
-    font-size: 1.25rem;
-  }
-
-  /* Underline the input */
+  // -------- Underline / focus bar --------
   .b-underline {
     background-color: #ccc;
     display: block;
-    height: 1px;
+    height: $underline-height;
     position: relative;
     transition: 0.4s;
     width: 100%;
   }
 
   .b-focus {
-    background-color: #2680eb;
+    background-color: $color-focus;
     bottom: 0;
-    height: 1px;
+    height: $underline-height;
     left: 50%;
     position: absolute;
     transition: 0.4s;
     width: 0;
+
+    &:disabled,
+    &.disabled { background-color: transparent; }
   }
 
-  :disabled.b-focus,
-  .disabled.b-focus {
-    background-color: transparent;
-  }
-
+  // -------- Validation --------
   .invalid-feedback {
-    color: #b30009;
-    /* display: none; */
+    color: $color-danger;
     margin-top: 0.25rem;
     font-size: 0.75rem;
   }
 
-  .invalid {
-    color: #b30009;
-  }
+  .invalid { color: $color-danger; }
 
   .invalid.b-underline,
-  .invalid.b-focus {
-    background-color: #b30009;
+  .invalid.b-focus { background-color: $color-danger; }
+
+  .form-select.form-control {
+    &:invalid,
+    &.is-invalid { border-color: $color-danger; }
   }
 
-  .form-select.form-control:invalid,
-  .form-select.form-control.is-invalid {
-    border-color: #b30009;
-    //padding-right: calc(1.5em + 0.75rem);
-    // background-repeat: no-repeat;
-    //background-position: center right calc(-1em + 1.5rem);
-    //background-size: calc(0.75em + 0.375rem) calc(0.75em + 0.375rem);
-    //background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='%23e34850' viewBox='0 0 24 24'%3e%3cpath d='M12 2c5.514 0 10 4.486 10 10s-4.486 10-10 10S2 17.514 2 12 6.486 2 12 2zm0 18c4.411 0 8-3.589 8-8s-3.589-8-8-8-8 3.589-8 8 3.589 8 8 8z'/%3e%3cpath d='M13 7h-2v6h2V7zm0 8h-2v2h2v-2z'/%3e%3c/svg%3e");
+  // Keep placeholder red in invalid state
+  .form-control.is-invalid { @include placeholder-color($color-danger); }
+
+  // Added styling: red text for invalid single selects (Bootstrap parity)
+  .was-validated {
+    .form-select:invalid:not([multiple]):not([size]),
+    .form-select:invalid:not([multiple])[size='1'] { color: $color-danger; }
   }
 
-  .form-control.is-invalid::-webkit-input-placeholder {
-    /* WebKit, Blink, Edge */
-    color: #b30009;
-  }
-  .form-control.is-invalid:-moz-placeholder {
-    /* Mozilla Firefox 4 to 18 */
-    color: #b30009;
-    opacity: 1;
-  }
-  .form-control.is-invalid::-moz-placeholder {
-    /* Mozilla Firefox 19+ */
-    color: #b30009;
-    opacity: 1;
-  }
-  .form-control.is-invalid:-ms-input-placeholder {
-    /* Internet Explorer 10-11 */
-    color: #b30009;
-  }
-  .form-control.is-invalid::-ms-input-placeholder {
-    /* Microsoft Edge */
-    color: #b30009;
-  }
-
-  .form-control.is-invalid::placeholder {
-    /* Most modern browsers support this now. */
-    color: #b30009;
-  }
-
-  .basic-input-sm {
-    padding: 0.25rem 0.5rem;
-    font-size: 0.75rem;
-    line-height: 1.5;
-    border-radius: 0.2rem;
-    min-height: 0px;
-  }
-
-  .basic-input-lg {
-    padding: 0.5rem 0.5rem;
-    font-size: 1.125rem;
-    line-height: 1.5;
-    border-radius: 0.3rem;
+  .form-select.is-invalid:not([multiple]):not([size]),
+  .form-select.is-invalid:not([multiple])[size='1'] {
+    color: $color-danger;
   }
 }
