--- a/src/components/select-field/select-field-styles.scss
+++ b/src/components/select-field/select-field-styles.scss
@@ -1,73 +1,107 @@
-.mt-3 {
-  margin-top: 3px;
-}
+// -------------------------------------------------
+// Tokens
+// -------------------------------------------------
+$color-text: #495057;
+$color-border: #ced4da;
+$color-muted: #6c757d;
+$color-danger: #b30009;
+$focus-border: #80bdff;
+$focus-glow: rgba(128, 189, 255, 0.5);
 
-input {
-  font-family: inherit;
-  font-size: inherit;
-  line-height: inherit;
-  margin: 0;
-}
+$label-sm: 0.875rem;
+$label-default: 1rem;
+$label-lg: 1.125rem;
 
-input {
-  overflow: visible;
-}
+$col-form-ptb: calc(0.375rem + 1px);
 
-.form-group {
-  padding: 5px 15px;
-}
+// arrows (Bootstrap-like) for custom-select
+$down-caret-danger: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='%23b30009' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='m2 5 6 6 6-6'/%3e%3c/svg%3e");
+$custom-caret: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 4 5'%3E%3Cpath fill='%23343a40' d='M2 0L0 2h4zm0 5L0 3h4z'/%3E%3C/svg%3E");
 
-.form-group {
-  margin-bottom: 0.25rem;
-}
-
-.form-group {
-  text-align: left;
-}
-
-.horizontal .form-group {
-  padding: 5px;
-}
-
-.basic-input-container {
-  position: relative;
-  text-align: left;
-}
-
-.horizontal .basic-input-container,
-.inline .basic-input-container {
-  padding: 0 15px;
-}
-
-.form-group.basic-input-container {
-  margin-bottom: 0.25rem;
-}
-
-label {
-  display: inline-block;
-  margin-bottom: 0.5rem;
-}
-
-.horizontal label,
-.inline label {
-  display: flex;
-  align-items: center;
-  justify-content: left;
-  margin-bottom: 0;
-  position: relative;
-}
-
-.horizontal label {
-  &.align-right {
-    justify-content: right;
+// -------------------------------------------------
+// Helpers
+// -------------------------------------------------
+@mixin placeholder-color($c) {
+  &::-webkit-input-placeholder {
+    color: $c;
+  }
+  &:-moz-placeholder {
+    color: $c;
+    opacity: 1;
+  }
+  &::-moz-placeholder {
+    color: $c;
+    opacity: 1;
+  }
+  &:-ms-input-placeholder {
+    color: $c;
+  }
+  &::-ms-input-placeholder {
+    color: $c;
+  }
+  &::placeholder {
+    color: $c;
   }
 }
 
-label {
-  // font-size: 0.75rem;
-  position: relative;
+// -------------------------------------------------
+// Label sizing
+// -------------------------------------------------
+.label-sm {
+  font-size: $label-sm !important;
+}
+.label-default {
+  font-size: $label-default !important;
+}
+.label-lg {
+  font-size: $label-lg !important;
 }
 
+// -------------------------------------------------
+// Horizontal / Inline layout
+// -------------------------------------------------
+.horizontal {
+  .form-group {
+    padding: 5px;
+  }
+
+  label {
+    display: flex;
+    align-items: center;
+    justify-content: left;
+    margin-bottom: 0;
+    position: relative;
+
+    &.align-right {
+      justify-content: right;
+    }
+  }
+
+  .form-group .form-control-label,
+  .form-group label {
+    margin-bottom: 0;
+    white-space: normal;
+  }
+}
+
+.inline {
+  label {
+    display: flex;
+    align-items: center;
+    justify-content: left;
+    margin-bottom: 0;
+    position: relative;
+  }
+
+  .form-group .form-control-label,
+  .form-group label {
+    margin-bottom: 0;
+    white-space: nowrap;
+    padding: 0 0.5rem;
+  }
+}
+
+// Adjust invalid label spacing within horizontal/inline
 .horizontal .form-group .form-control-label.invalid,
 .inline .form-group .form-control-label.invalid {
   position: relative;
@@ -75,221 +109,136 @@ label {
   padding-top: 12px;
 }
 
+// Bootstrap col-form-label base
 .col-form-label {
-  padding-top: calc(0.375rem + 1px);
-  padding-bottom: calc(0.375rem + 1px);
+  padding-top: $col-form-ptb;
+  padding-bottom: $col-form-ptb;
   margin-bottom: 0;
   font-size: inherit;
   line-height: 1.5;
 }
 
-.form-group .form-control-label,
-.form-group label {
-  // font-size: 0.75rem;
-  font-weight: 400;
-  line-height: 1.1;
-  margin-bottom: 0.25rem;
+// Align by size in inline/horizontal
+.inline,
+.horizontal {
+  .form-control-label {
+    align-items: start !important;
+    padding-top: 6px !important;
+  }
+  .label-sm {
+    align-items: start !important;
+    padding-top: 5px !important;
+  }
+  .label-default {
+    align-items: start !important;
+    padding-top: 7px !important;
+  }
+  .label-lg {
+    align-items: start !important;
+    padding-top: 9px !important;
+  }
 }
 
-.inline .form-group .form-control-label,
-.inline .form-group label {
-  margin-bottom: 0;
-  white-space: nowrap;
-}
-
-.horizontal .form-group .form-control-label,
-.horizontal .form-group label {
-  margin-bottom: 0;
-  white-space: normal;
-}
-
-.inline .form-group .form-control-label,
-.inline .form-group label {
-  padding: 0 0.5rem;
-}
-
-.form-control {
-  display: block;
-  width: 100%;
-  padding: 0.375rem 0.75rem;
-  font-size: 1rem;
-  line-height: 1.5;
-  color: #495057;
-  background-color: #fff;
-  background-clip: padding-box;
-  border: 1px solid #ced4da;
-  border-radius: 0.25rem;
-  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
-  width: 100%;
-}
-
-.form-control:disabled {
-  background-color: #f5f5f5;
-}
-
-.form-control.input-sm {
-  padding: 4px 0.5rem;
-  font-size: 0.8333rem;
-}
-
-.form-control.input-lg {
-  padding: 8px 0.5rem;
-  font-size: 1rem;
-  line-height: 1.5;
-}
-
-.basic-input-container input {
-  /* border: none; */
-  font-size: 0.9375rem;
-  font-weight: 300;
-  line-height: 1.2;
-  transition: border-color 0.25s ease;
-}
-
-.form-control:focus {
-  background-color: transparent;
-  border-color: #9bc4f6;
-  color: #383838;
-  outline: 0;
-  box-shadow: 0 0 0 0.2rem rgb(0 123 255 / 25%);
-}
-
-.basic-input-container input:focus {
-  /* border-bottom: 1px solid #2680eb; */
-  box-shadow: none;
-  outline: none;
-}
-
+// -------------------------------------------------
+// Custom select (Bootstrap-like)
+// -------------------------------------------------
 .custom-select {
   display: inline-block;
   width: 100%;
-  height: calc(2.25rem + 2px);
   padding: 0.375rem 1.75rem 0.375rem 0.75rem;
   line-height: 1.5;
-  color: #495057;
+  color: $color-text;
   vertical-align: middle;
-  background: #fff
-    url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 4 5'%3E%3Cpath fill='%23343a40' d='M2 0L0 2h4zm0 5L0 3h4z'/%3E%3C/svg%3E") no-repeat
-    right 0.75rem center;
+  background: #fff $custom-caret no-repeat right 0.75rem center;
   background-size: 8px 10px;
-  border: 1px solid #ced4da;
+  border: 1px solid $color-border;
   border-radius: 0.25rem;
   appearance: none;
+
+  &:focus {
+    border-color: $focus-border;
+    outline: 0;
+    box-shadow: inset 0 1px 2px rgb(0 0 0 / 8%), 0 0 5px $focus-glow;
+  }
+
+  &[multiple],
+  &[size]:not([size='1']) {
+    height: auto;
+    padding-right: 0.75rem;
+    background-image: none;
+  }
+
+  &:disabled {
+    color: $color-muted;
+    background-color: #e9ecef;
+  }
+
+  // Hide IE11 caret
+  &::-ms-expand {
+    opacity: 0;
+  }
 }
 
-.custom-select:focus {
-  border-color: #80bdff;
-  outline: 0;
-  box-shadow: inset 0 1px 2px rgb(0 0 0 / 8%), 0 0 5px rgb(128 189 255 / 50%);
-}
-
-/* .custom-select:focus::-ms-value {
-    // For visual consistency with other platforms/browsers,
-    // suppress the default white text on blue background highlight given to
-    // the selected option text when the (still closed) <select> receives focus
-    // in IE and (under certain conditions) Edge.
-    // See https://github.com/twbs/bootstrap/issues/19398.
-    color: $input-color;
-    background-color: $input-bg;
-  } */
-
-.custom-select[multiple],
-.custom-select[size]:not([size='1']) {
-  height: auto;
-  padding-right: 0.75rem;
-  background-image: none;
-}
-
-.custom-select:disabled {
-  color: #6c757d;
-  background-color: #e9ecef;
-}
-
-// Hides the default caret in IE11
-.custom-select::-ms-expand {
-  opacity: 0;
-}
-
-// .select-sm {
-//   height: calc(1.8125rem + 2px);
-//   padding-top: 0.3rem;
-//   padding-bottom: 0.375rem;
-//   font-size: 0.833rem !important;
-// }
-
-// .select-lg {
-//   height: calc(2.875rem + 2px);
-//   padding-top: 0.375rem;
-//   padding-bottom: 0.375rem;
-//   font-size: 1.25rem !important;
-// }
-
+// -------------------------------------------------
+// Validation feedback + state
+// -------------------------------------------------
 .invalid-feedback {
-  color: #b30009;
-  /* display: none; */
+  color: $color-danger;
   margin-top: 0.25rem;
   font-size: 0.75rem;
 }
 
 .invalid {
-  color: #b30009;
+  color: $color-danger;
 }
 
-// .invalid.b-underline,
-// .invalid.b-focus {
-//   background-color: #b30009;
-// }
-
-.form-select.form-control:invalid,
-.form-select.form-control.is-invalid {
-  border-color: #b30009;
-  //padding-right: calc(1.5em + 0.75rem);
-  // background-repeat: no-repeat;
-  //background-position: center right calc(-1em + 1.5rem);
-  //background-size: calc(0.75em + 0.375rem) calc(0.75em + 0.375rem);
-  fill: #b30009;
-  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='%23b30009' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='m2 5 6 6 6-6'/%3e%3c/svg%3e") !important;
+// Border + caret color in invalid state
+.form-select:invalid,
+.form-select.is-invalid,
+.custom-select:invalid,
+.custom-select.is-invalid {
+  border-color: $color-danger;
+  color: $color-danger;
+  fill: $color-danger;
+  background-image: $down-caret-danger !important;
 }
 
-.form-control.is-invalid::-webkit-input-placeholder {
-  /* WebKit, Blink, Edge */
-  color: #b30009;
-}
-.form-control.is-invalid:-moz-placeholder {
-  /* Mozilla Firefox 4 to 18 */
-  color: #b30009;
-  opacity: 1;
-}
-.form-control.is-invalid::-moz-placeholder {
-  /* Mozilla Firefox 19+ */
-  color: #b30009;
-  opacity: 1;
-}
-.form-control.is-invalid:-ms-input-placeholder {
-  /* Internet Explorer 10-11 */
-  color: #b30009;
-}
-.form-control.is-invalid::-ms-input-placeholder {
-  /* Microsoft Edge */
-  color: #b30009;
+// Red placeholders while invalid
+.form-select.is-invalid,
+.custom-select.is-invalid {
+  @include placeholder-color($color-danger);
 }
 
-.form-control.is-invalid::placeholder {
-  /* Most modern browsers support this now. */
-  color: #b30009;
+// Options inherit red text on invalid
+.form-select.is-invalid option,
+.custom-select.is-invalid option {
+  color: $color-danger;
+  background-color: transparent;
 }
 
-.basic-input-sm {
-  padding: 0.25rem 0.5rem !important;
-  font-size: 0.75rem !important;
-  line-height: 1.5 !important;
-  border-radius: 0.2rem !important;
-  min-height: 0px !important;
+// Remove background arrow/extra padding for lists (multi or tall)
+.form-select.is-invalid[multiple],
+.form-select.is-invalid[size]:not([size='1']):first-child,
+.custom-select.is-invalid[multiple],
+.custom-select.is-invalid[size]:not([size='1']):first-child {
+  background-image: none !important;
+  background-color: transparent !important;
+  padding-right: 0 !important;
 }
 
-.basic-input-lg {
-  padding: 0.5rem 0.5rem !important;
-  font-size: 1.125rem !important;
-  line-height: 1.5 !important;
-  border-radius: 0.3rem !important;
+// Base lists (multi/tall) never show the caret image
+.form-select[multiple],
+.form-select[size]:not([size='1']),
+.custom-select[multiple],
+.custom-select[size]:not([size='1']) {
+  padding-right: 0 !important;
+  background-image: none;
+}
+
+// Red text color for invalid single selects (Bootstrap parity)
+.was-validated .form-select:invalid:not([multiple]):not([size]),
+.was-validated .form-select:invalid:not([multiple])[size='1'],
+.form-select.is-invalid:not([multiple]):not([size]),
+.form-select.is-invalid:not([multiple])[size='1'] {
+  color: $color-danger;
 }
