plumage auto complete single field

--- a/src/components/autocomplete-single/autocomplete-input.scss
+++ b/src/components/autocomplete-single/autocomplete-input.scss
@@ -13,6 +13,7 @@
 
   .invalid-feedback {
     margin-top: 0 !important;
+    color: #b30000 !important;
   }
 
   /* ---------------- Single-select shell ---------------- */
