--- a/src/components/plumage-input-field/plumage-input-field-styles.scss
+++ b/src/components/plumage-input-field/plumage-input-field-styles.scss
@@ -157,7 +157,7 @@
 
   .form-control:invalid,
   .form-control.is-invalid {
-    border-color: #b30009;
+    // border-color: #b30009;
     padding-right: calc(1.5em + 0.75rem);
     background-repeat: no-repeat;
     background-position: center right calc(-1em + 1.5rem);
